@@ -265,6 +265,7 @@ Major new features:
   - double-precision sine: sin
   - single-precision sine: sinf
   - double-precision sincos: sincos
+  - single-precision sincos: sincosf
 
   GCC support for auto-vectorization of functions on PPC64 is not yet
   available. Until that is done, the new vector math functions are
